overflow fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
   text-align: center;
   line-height: 1.75em;
   font-family: "DIN Pro", "Arial Narrow", Arial, sans-serif;
+  overflow: hidden;
 }
 
 @font-face {
