--- a/src/sections/Home/Hero/Hero.scss
+++ b/src/sections/Home/Hero/Hero.scss
@@ -1,3 +1,5 @@
+@import "~include-media/dist/_include-media.scss";
+
 .hero {
   height: auto;
   width: 98%;
@@ -5,6 +7,9 @@
   top: 5rem;
   margin: 0 auto !important;
   background: linear-gradient(180deg, #edb1b7 0%, #e9beae 70.93%, #e9d3c1 100%);
+  @include media("<=tablet") {
+    padding: 50px 0px 100px 0px;
+  }
 
   &-text {
     flex-direction: column;
